# Flappy_Bird

./: AnimatedSprite.cpp  AnimatedSprite.h  Base.cpp  Base.h  Bird.cpp  Bird.h  CMakeLists.txt  Game.cpp  Game.h  Pipe.cpp  Pipe.h  Sky.cpp  Sky.h  main.cpp
